<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo3"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="345dp"
        android:layout_height="422dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Registro_Nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/style_bordes"
                android:hint="@string/Nombre"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/Registro_Apellido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/style_bordes"
                android:hint="@string/Apellido"
                android:inputType="text"
                android:textColorHint="@color/black"
                tools:ignore="Autofill,TouchTargetSizeCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/Registro_Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/style_bordes"
            android:hint="@string/Correo"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/Registro_Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_bordes"
            android:hint="@string/Contraseña"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/BRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#6224CF"
            android:drawableEnd="@android:drawable/ic_menu_send"
            android:text="@string/BRegistrate"
            app:iconTint="@color/white"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/BRegistro_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#6224CF"
            android:drawableEnd="@android:drawable/ic_menu_send"
            android:text="@string/btnIn"
            app:iconTint="@color/white"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/Mensaje"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text=""
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <ImageView
        android:id="@+id/Imagen"
        android:layout_width="294dp"
        android:layout_height="164dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088"
        app:srcCompat="@drawable/registro"
        tools:ignore="ContentDescription,ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
